--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript-plugin-css-modules": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sas": "^3.0.4",
+    "sass": "^1.54.3"
   }
 }
